# material_part_inspection

./: .env.example  .gitignore  README.md  agent.md  docker-compose.yaml  dvc.yaml  main.py  params.yaml  pyproject.toml
conf/: config.yaml
conf/data/: default.yaml
conf/env/: colab.yaml  local_rtx2080.yaml  local_rtx3050.yaml
conf/mode/: evaluate.yaml  train.yaml
conf/model/: resnet50.yaml
conf/training/: default.yaml
docker/mlflow/: Dockerfile
docs/: clone_and_run.md  dvc_dataset_versioning.md  experimental.md  runbook_dataset_experiment.md
scripts/: init-db.sql
src/: evaluate.py
src/data/: dataset.py  transforms.py
src/models/: model.py
src/training/: losses.py  trainer.py
src/utils/: config.py  device.py  lakefs_client.py  logger.py
