[project]
name = "part-inspection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "grad-cam>=1.5.5",
    "hydra-core>=1.3.3",
    "matplotlib>=3.11.0",
    "mlflow>=3.14.0",
    "opencv-python>=4.13.0.92",
    "torch>=2.12.1",
    "torch-vision>=0.1.6.dev0",
]
