[project]
name = "part-inspection"
version = "0.1.0"
description = "Material Part Inspection — ML experimental pipeline (PyTorch + Hydra, binary burr classification)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # core training
    "torch>=2.12.1",
    "torchvision>=0.27.1",
    # config + orchestration
    "hydra-core>=1.3.3",
    "omegaconf>=2.3.0",
    "dvc>=3.55.0",
    # experiment tracking
    "mlflow>=3.14.0",
    # data lake (S3-compatible lakeFS gateway)
    "boto3>=1.35.0",
    # data handling
    "pandas>=2.2.0",
    "pillow>=10.0.0",
    "scikit-learn>=1.4.0",
    # drift analysis
    "evidently>=0.7.0",
    # explainability
    "grad-cam>=1.5.5",
    # viz / image utils
    "matplotlib>=3.9.0",
    "opencv-python>=4.13.0.92",
    "numpy>=1.26.0",
]
